[CALCITE-5737] Support JDK 20