@@ -35,6 +35,8 @@ import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -67,8 +69,8 @@ public class SplunkConnectionImpl implements SplunkConnection {
   final Map<String, String> requestHeaders = new HashMap<>();
 
   public SplunkConnectionImpl(String url, String username, String password)
-      throws MalformedURLException {
-    this(new URL(url), username, password);
+      throws MalformedURLException, URISyntaxException {
+    this(new URI(url).toURL(), username, password);
   }
 
   public SplunkConnectionImpl(URL url, String username, String password) {
@@ -243,7 +245,7 @@ public class SplunkConnectionImpl implements SplunkConnection {
     Unsafe.systemExit(1);
   }
 
-  public static void main(String[] args) throws MalformedURLException {
+  public static void main(String[] args) throws MalformedURLException, URISyntaxException {
     Map<String, String> argsMap = new HashMap<>();
     argsMap.put("uri",           "https://localhost:8089");
     argsMap.put("username",      "admin");
